--- a/index.html
+++ b/index.html
@@ -1,6 +1,190 @@
-cat
-this is my file
-index.html
-how do I break out of this?
+<!DOCTYPE html>
+<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
+<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
+<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
+<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
+	<head>
+		<meta charset="utf-8">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+		<title></title>
+		<meta name="description" content="">
+		<meta name="viewport" content="width=device-width">
+		<style type="text/css">
+		/*RESETS/**/
+			article,aside,details,figcaption,figure,footer,header,hgroup,main,nav,section,summary{display:block;}audio,canvas,video{display:inline;zoom:1;}audio:not([controls]){display:none;height:0;}[hidden]{display:none;}html{-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;font-size:100%;}html,button,input,select,textarea{font-family:sans-serif;}a:focus{outline:thin dotted;}a:active,a:hover{outline:0;}h1{font-size:2em;margin:.67em 0;}h2{font-size:1.5em;margin:.83em 0;}h3{font-size:1.17em;margin:1em 0;}h4{font-size:1em;margin:1.33em 0;}h5{font-size:.83em;margin:1.67em 0;}h6{font-size:.67em;margin:2.33em 0;}abbr[title]{border-bottom:1px dotted;}b,strong{font-weight:700;}blockquote{margin:1em 40px;}dfn{font-style:italic;}hr{-moz-box-sizing:content-box;box-sizing:content-box;height:0;}mark{background:#ff0;color:#000;}code,kbd,pre,samp{_font-family:'courier new', monospace;font-family:monospace, serif;font-size:1em;}pre{white-space:pre-wrap;word-wrap:break-word;}q{quotes:none;}q:before,q:after{content:none;}small{font-size:80%;}sub,sup{font-size:75%;line-height:0;position:relative;vertical-align:baseline;}sup{top:-.5em;}sub{bottom:-.25em;}dd{margin:0 0 0 40px;}menu,ol,ul{padding:0 0 0 40px;}nav ul,nav ol{list-style:none;list-style-image:none;}img{-ms-interpolation-mode:bicubic;border:0;}svg:not(:root){overflow:hidden;}fieldset{border:1px solid silver;margin:0 2px;padding:.35em .625em .75em;}legend{border:0;margin-left:-7px;padding:0;white-space:normal;}button,input,select,textarea{font-size:100%;margin:0;vertical-align:middle;}button,input{line-height:normal;}button,select{text-transform:none;}button,html input[type=button],/* 1 */
+input[type=reset],input[type=submit]{-webkit-appearance:button;cursor:pointer;overflow:visible;}button[disabled],html input[disabled]{cursor:default;}input[type=checkbox],input[type=radio]{box-sizing:border-box;height:13px;padding:0;width:13px;}input[type=search]{-moz-box-sizing:content-box;-webkit-appearance:textfield;-webkit-box-sizing:content-box;box-sizing:content-box;}input[type=search]::-webkit-search-cancel-button,input[type=search]::-webkit-search-decoration{-webkit-appearance:none;}button::-moz-focus-inner,input::-moz-focus-inner{border:0;padding:0;}textarea{overflow:auto;vertical-align:top;}table{border-collapse:collapse;border-spacing:0;}body,figure,form{margin:0;}p,pre,dl,menu,ol,ul{margin:1em 0;}
 
-
+			/*custom/**/
+			.sub{font-size:10px;}
+		</style>
+	</head>
+	<body>
+		<div class="outer">
+			<aside>
+				<p>This tool allows you to compare glyphs from different fonts.</p>
+				<p>The glyph is styled to show the em square for comparison. As different fonts have different
+				heights and em square size, they will not align exactly as is prefered <span class='sub'>anyone with sugestions 
+				as to how this can be done feel free to contact me</span>.<br /> The glyphs are set to font-size: 400px; with line-height: 1em;</p>
+				All css, html and javascript is included in this one file so you can see it all by doing 'view source code'. Enjoy. And let me know 
+				if you have any suggestions or comments.</p><a href="../contact">contact</a>
+			</aside>
+			<section>
+				<nav id="top-links">
+					<a href="#" class="choice-char" id="low-a">a</a> |
+					<a href="#" class="choice-char" id="low-b">b</a> |
+					<a href="#" class="choice-char" id="low-c">c</a> | 
+					<a href="#" class="choice-char" id="low-d">d</a> | 
+					<a href="#" class="choice-char" id="low-e">e</a> | 
+					<a href="#" class="choice-char" id="low-f">f</a> | 
+					<a href="#" class="choice-char" id="low-g">g</a> | 
+					<a href="#" class="choice-char" id="low-h">h</a> | 
+					<a href="#" class="choice-char" id="low-i">i</a> | 
+					<a href="#" class="choice-char" id="low-j">j</a> | 
+					<a href="#" class="choice-char" id="low-k">k</a> | 
+					<a href="#" class="choice-char" id="low-l">l</a> | 
+					<a href="#" class="choice-char" id="low-m">m</a> | 
+					<a href="#" class="choice-char" id="low-n">n</a> | 
+					<a href="#" class="choice-char" id="low-o">o</a> | 
+					<a href="#" class="choice-char" id="low-p">p</a> | 
+					<a href="#" class="choice-char" id="low-q">q</a> | 
+					<a href="#" class="choice-char" id="low-r">r</a> |
+					<a href="#" class="choice-char" id="low-s">s</a> | 
+					<a href="#" class="choice-char" id="low-t">t</a> | 
+					<a href="#" class="choice-char" id="low-u">u</a> | 
+					<a href="#" class="choice-char" id="low-v">v</a> | 
+					<a href="#" class="choice-char" id="low-w">w</a> | 
+					<a href="#" class="choice-char" id="low-x">x</a> | 
+					<a href="#" class="choice-char" id="low-y">y</a> | 
+					<a href="#" class="choice-char" id="low-z">z</a>
+					<br />
+					<a href="#" class="choice-char" id="upp-a">A</a> | 
+					<a href="#" class="choice-char" id="upp-b">B</a> | 
+					<a href="#" class="choice-char" id="upp-c">C</a> | 
+					<a href="#" class="choice-char" id="upp-d">D</a> | 
+					<a href="#" class="choice-char" id="upp-e">E</a> | 
+					<a href="#" class="choice-char" id="upp-f">F</a> | 
+					<a href="#" class="choice-char" id="upp-g">G</a> | 
+					<a href="#" class="choice-char" id="upp-h">H</a> | 
+					<a href="#" class="choice-char" id="upp-i">I</a> | 
+					<a href="#" class="choice-char" id="upp-j">J</a> | 
+					<a href="#" class="choice-char" id="upp-k">K</a> | 
+					<a href="#" class="choice-char" id="upp-l">L</a> | 
+					<a href="#" class="choice-char" id="upp-m">M</a> | 
+					<a href="#" class="choice-char" id="upp-n">N</a> | 
+					<a href="#" class="choice-char" id="upp-o">O</a> | 
+					<a href="#" class="choice-char" id="upp-p">P</a> | 
+					<a href="#" class="choice-char" id="upp-q">Q</a> | 
+					<a href="#" class="choice-char" id="upp-r">R</a> | 
+					<a href="#" class="choice-char" id="upp-s">S</a> | 
+					<a href="#" class="choice-char" id="upp-t">T</a> | 
+					<a href="#" class="choice-char" id="upp-u">U</a> | 
+					<a href="#" class="choice-char" id="upp-v">V</a> |
+					<a href="#" class="choice-char" id="upp-w">W</a> | 
+					<a href="#" class="choice-char" id="upp-x">X</a> | 
+					<a href="#" class="choice-char" id="upp-y">Y</a> | 
+					<a href="#" class="choice-char" id="upp-z">Z</a>
+					<br />
+					<a href="#" class="choice-char" id="exclaim">!</a> | 
+					<a href="#" class="choice-char" id="att">@</a> | 
+					<a href="#" class="choice-char" id="hash">#</a> | 
+					<a href="#" class="choice-char" id="dollar">$</a> | 
+					<a href="#" class="choice-char" id="percent">%</a> | 
+					<a href="#" class="choice-char" id="hat">^</a> | 
+					<a href="#" class="choice-char" id="star">*</a> | 
+					<a href="#" class="choice-char" id="openb">(</a> | 
+					<a href="#" class="choice-char" id="closeb">)</a> | 
+					<a href="#" class="choice-char" id="minus">-</a> | 
+					<a href="#" class="choice-char" id="plus">+</a> |
+					<a href="#" class="choice-char" id="equals">=</a> | 
+					<a href="#" class="choice-char" id="one">1</a> |
+					<a href="#" class="choice-char" id="two">2</a> | 
+					<a href="#" class="choice-char" id="three">3</a> | 
+					<a href="#" class="choice-char" id="four">4</a> | 
+					<a href="#" class="choice-char" id="five">5</a> | 
+					<a href="#" class="choice-char" id="six">6</a> | 
+					<a href="#" class="choice-char" id="seven">7</a> | 
+					<a href="#" class="choice-char" id="eight">8</a> | 
+					<a href="#" class="choice-char" id="nine">9</a> |
+					<a href="#" class="choice-char" id="zero">0</a> | 
+					<a href="#" class="choice-char" id="question">?</a> | 
+					<a href="#" class="choice-char" id="period">.</a> | 
+					<a href="#" class="choice-char" id="comma">,</a> | 
+					<a href="#" class="choice-char" id="semic">;</a>
+					<a href="#" class="choice-char" id="greater">&gt;</a> | 
+					<a href="#" class="choice-char" id="less">&lt;</a> | 
+					<a href="#" class="choice-char" id="colon">:</a> | 
+					<a href="#" class="choice-char" id="2qoute">"</a> | 
+					<a href="#" class="choice-char" id="opencurl">{</a> | 
+					<a href="#" class="choice-char" id="closecurl">}</a> | 
+					<a href="#" class="choice-char" id="opensquare">[</a> | 
+					<a href="#" class="choice-char" id="closesquare">]</a> | 
+					<a href="#" class="choice-char" id="tilda">~</a> | 
+					<a href="#"  class="choice-char"id="slash">/</a>  
+				</nav>
+				<section id="dds">
+					<form id="aform">
+						<select id="select1" size="1">
+							<option value="Helvetica" selected="selected">Helvetica</option>
+							<option value="Helvetica Neue" selected="selected">Helvetica Neue</option>
+							<option value="Arial">Arial</option>
+							<option value="Verdana">Verdana</option>
+							<option value="Lucida Grande">Lucida Grande</option>
+							<option value="Gill Sans">Gill Sans</option>
+							<option value="Tahoma">Tahoma</option>
+							<option value="Eurostile">Eurostile</option>
+							<option value="Trebuchet MS">Trebuchet MS</option>
+							<option value="Century Gothic">Century Gothic</option>
+							<option value="Optima">Optima</option>
+							<option value="Myriad Web">Myriad Web</option>
+							<option value="Futura">Futura</option>
+							<option value="Georgia">Georgia</option>
+							<option value="Times">Times</option>
+							<option value="Times New Roman">Times New Roman</option>
+							<option value="Palatino">Palatino</option>
+							<option value="Garamond">Garamond</option>
+							<option value="Baskerville">Baskerville</option>
+							<option value="Rockwell">Rockwell</option>
+							<option value="Courier New">Courier New</option>
+						</select>
+		
+						<select id="select2" size="1" style="float: right;">
+							<option value="Helvetica">Helvetica</option>
+		
+							<option value="Helvetica Neue" selected="selected">Helvetica Neue</option>
+							<option value="Arial"  selected="selected">Arial</option>
+							<option value="Verdana">Verdana</option>
+							<option value="Lucida Grande">Lucida Grande</option>
+							<option value="Gill Sans">Gill Sans</option>
+							<option value="Tahoma">Tahoma</option>
+							<option value="Eurostile">Eurostile</option>
+							<option value="Trebuchet MS">Trebuchet MS</option>
+							<option value="Century Gothic">Century Gothic</option>
+							<option value="Optima">Optima</option>
+							<option value="Myriad Web">Myriad Web</option>
+							<option value="Futura">Futura</option>
+							<option value="Georgia">Georgia</option>
+							<option value="Times">Times</option>
+							<option value="Times New Roman">Times New Roman</option>
+							<option value="Palatino">Palatino</option>
+							<option value="Garamond">Garamond</option>
+							<option value="Baskerville">Baskerville</option>
+							<option value="Rockwell">Rockwell</option>
+							<option value="Courier New">Courier New</option>
+						</select>
+					</form>
+				</section>
+				<section id="display">
+					<div id="left">
+						<span class="heading" id="title1">Helvetica <span style="font-size: 12px;">(draggable)</span></span>
+						<div class="alg-cent" id="draggable"><span id="elem1">M</span></div>
+					</div>
+					<div id="right">
+						<span class="heading" id="title2">Arial</span>
+						<div class="alg-cent"><span id="elem2">M</span></div>
+					</div>
+				</section>
+			</section>
+		</div>
+		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
+	</body>
+</html>
